# ros2course-2024-1

./: Readme.md
my_pkg_py/: package.xml  setup.cfg  setup.py
my_pkg_py/my_pkg_py/: my_node.py
tb3ctrl_interfaces/: CMakeLists.txt  package.xml
tb3ctrl_interfaces/msg/: Tb3RobotState.msg
tb3ctrl_py/: package.xml  setup.cfg  setup.py
tb3ctrl_py/tb3ctrl_py/: go_in_circle.py  tb3_robot_state.py
